# uav-vex-ros-workspace

./: README.md
devel/include/dockerpublisher/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/esp32communication/: can.h  canRequest.h  canResponse.h  imu.h
devel/include/vexai/: Encoder.h
devel/include/zed_nodelets/: ZedConfig.h
devel/lib/dockerpublisher/: publisher  service
devel/lib/nox/: nox_controller
devel/lib/pkgconfig/: cleaningbot_2dnav.pc  controllerMovement.pc  diff_drive.pc  dockerpublisher.pc  esp32communication.pc  i2c_imu.pc  manualmovement.pc  nox.pc  nox_description.pc  realsense2_description.pc  robot_setup_tf.pc  simulation.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc  vexai.pc  zed_ar_track_alvar_example.pc  zed_depth_sub_tutorial.pc  zed_display_rviz.pc  zed_interfaces.pc  zed_multicamera_example.pc  zed_nodelet_example.pc  zed_nodelets.pc  zed_obj_det_sub_tutorial.pc  zed_rtabmap_example.pc  zed_sensors_sub_tutorial.pc  zed_tracking_sub_tutorial.pc  zed_video_sub_tutorial.pc  zed_wrapper.pc
src/: .C.swp
src/cleaningbot_2dnav/: CMakeLists.txt  commands.txt  costmap_common_params.yaml  local_costmap_params.yaml
src/esp32communication/: CMakeLists.txt
src/esp32communication/scripts/: wifiServer.py
src/esp32communication/srv/: can.srv
src/manualmovement/: CMakeLists.txt
src/nox/: MotorTest.ino  rosOdomEncodersDrokOfficial.ino
src/robot_setup_tf/: CMakeLists.txt  package.xml
src/vexai/: CMakeLists.txt  commands.txt
(+119 files in other folders)
